--- a/roles/rsyslog/templates/rsyslog.conf.j2
+++ b/roles/rsyslog/templates/rsyslog.conf.j2
@@ -63,7 +63,7 @@ $template r_http_apps, "/var/log/hosts/%HOSTNAME%.gnome.org/%$YEAR%/%$MONTH%/%$D
 $template r_other_apps, "/var/log/hosts/%HOSTNAME%.gnome.org/%$YEAR%/%$MONTH%/%$DAY%/non-http-apps.log"
 $template r_local1, "/var/log/hosts/%HOSTNAME%/%$YEAR%/%$MONTH%/%$DAY%/local1.log"
 $template r_oscp4_audit, "/var/log/hosts/%HOSTNAME%/%$YEAR%/%$MONTH%/%$DAY%/audit.log"
-$template r_oscp4_gitlab_application, "/var/log/hosts/%HOSTNAME%.gnome.org/%$YEAR%/%$MONTH%/%$DAY%/production_json.log"
+$template r_oscp4_gitlab_application, "/var/log/hosts/%HOSTNAME%.gnome.org/%$YEAR%/%$MONTH%/%$DAY%/application_json.log"
 $template r_oscp4_gitlab_exceptions, "/var/log/hosts/%HOSTNAME%.gnome.org/%$YEAR%/%$MONTH%/%$DAY%/exceptions_json.log"
 $template r_oscp4_gitlab_api, "/var/log/hosts/%HOSTNAME%.gnome.org/%$YEAR%/%$MONTH%/%$DAY%/api_json.log"
 $template r_oscp4_gitlab_audit, "/var/log/hosts/%HOSTNAME%.gnome.org/%$YEAR%/%$MONTH%/%$DAY%/audit_json.log"
