--- a/roles/dovecot/templates/auth-ldap.conf.ext.j2
+++ b/roles/dovecot/templates/auth-ldap.conf.ext.j2
@@ -1,10 +1,10 @@
 passdb {
   driver = ldap
-  args = /etc/dovecot/dovecot-ldap.conf.ext
+  args = /etc/dovecot/conf.d/dovecot-ldap.conf.ext
 }
 
 userdb {
   driver = ldap
-  args = /etc/dovecot/dovecot-ldap.conf.ext
+  args = /etc/dovecot/conf.d/dovecot-ldap.conf.ext
   default_fields = home={{ dovecot_homedir }}
 }
