IDM doesn't allow anonymous binds

--- a/roles/dovecot/templates/dovecot-ldap.conf.ext.j2
+++ b/roles/dovecot/templates/dovecot-ldap.conf.ext.j2
@@ -1,6 +1,8 @@
-uris = {{ dovecot_ldap_host }} 
+uris = {{ dovecot_ldap_host }}
 auth_bind = yes
-auth_bind_userdn = {{ dovecot_ldap_bind_userdn }} 
+auth_bind_userdn = {{ dovecot_ldap_bind_userdn }}
+dn = {{ dovecot_bind_dn }}
+dnpass = {{ dovecot_bind_pass }}
 ldap_version = 3
 base = {{ dovecot_ldap_base }}
 deref = never
