Land ftp-release-notifications@g.o (https://gitlab.gnome.org/Infrastructure/Infrastructure/-/issues/954)

--- a/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
+++ b/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
@@ -393,6 +393,7 @@ board-list@gnome.org board@discourse.gnome.org
 travel-committee@gnome.org travel-committee@discourse.gnome.org
 fundraising@gnome.org board@gnome.org,zana@gnome.org
 gitlab-abuse-reports@gnome.org code-of-conduct-committee@discourse.gnome.org
+ftp-release-notifications@gnome.org zaitor@opensuse.org, leio@gentoo.org, mattst88@gentoo.org
 
 @discourse.gnome.org discourse-incoming-email@staff-mail.gnome.org
 
