--- a/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
+++ b/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
@@ -394,6 +394,7 @@ travel-committee@gnome.org travel-committee@discourse.gnome.org
 fundraising@gnome.org board@gnome.org,zana@gnome.org
 gitlab-abuse-reports@gnome.org code-of-conduct-committee@discourse.gnome.org
 ftp-release-notifications@gnome.org zaitor@opensuse.org, leio@gentoo.org, mattst88@gentoo.org, heftig@archlinux.org, luc14n0@opensuse.org
+docs-feedback@gnome.org incoming+gnome-gnome-user-docs-1067-issue-@gitlab.gnome.org
 
 @discourse.gnome.org discourse-incoming-email@staff-mail.gnome.org
 
