Add latam@gnome.org alias

--- a/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
+++ b/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
@@ -312,6 +312,9 @@ shop@gnome.org zana@gnome.org, kprogri@gnome.org, chenriksen@gnome.org
 # GUADEC headshots
 headshots@gnome.org guadec-headshots-list@gnome.org
 
+# GNOME Latam social media accounts
+latam@gnome.org chenriksen@gnome.org
+
 # Bot user for managing mirrors with Lorry
 # https://gitlab.gnome.org/Infrastructure/Infrastructure/-/issues/705
 lorry-controller-gitlab-bot@gnome.org gnome-sysadmin@gnome.org
