--- a/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
+++ b/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
@@ -394,7 +394,7 @@ spamtrap@gnome.org spamtrap@staff-mail.gnome.org
 board-list@gnome.org board@discourse.gnome.org
 code-of-conduct-committee@gnome.org incoming+teams-conduct-workspace-5156-issue-@gitlab.gnome.org
 docs-feedback@gnome.org incoming+gnome-gnome-user-docs-1067-issue-@gitlab.gnome.org
-ftp-release-notifications@gnome.org zaitor@opensuse.org, leio@gentoo.org, mattst88@gentoo.org, heftig@archlinux.org, luc14n0@opensuse.org, pacho@gentoo.org, kalevlember@gmail.com, jbicha@ubuntu.com, emilyyrose@gmail.com, bandali@canonical.com, casaxa@gmail.com, nathan.teodosio@canonical.com
+ftp-release-notifications@gnome.org zaitor@opensuse.org, leio@gentoo.org, mattst88@gentoo.org, heftig@archlinux.org, luc14n0@opensuse.org, pacho@gentoo.org, kalevlember@gmail.com, jbicha@ubuntu.com, emilyyrose@gmail.com, bandali@canonical.com, casaxa@gmail.com, nathan.teodosio@canonical.com, jarred.wilson@canonical.com
 fundraising@gnome.org board@gnome.org,zana@gnome.org
 gitlab-abuse-reports@gnome.org code-of-conduct-committee@discourse.gnome.org
 travel-committee@gnome.org travel-committee@discourse.gnome.org
