Update guadec@gnome.org alias

--- a/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
+++ b/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
@@ -33,7 +33,7 @@ guadec-logos@gnome.org guadec-planning@gnome.org
 
 # On request from Ekaterina Gerasimova on 2014-07-17
 # non-GNOME addresses are related to GUADEC 2020 in Mexico
-guadec@gnome.org zana@gnome.org, kprogri@gnome.org, chenriksen@gnome.org, caxcan70@gmail.com, saharariven@gmail.com, kaartz20@gmail.com, edmundormz@gmail.com
+guadec@gnome.org zana@gnome.org, kprogri@gnome.org, chenriksen@gnome.org, asmitbm2952002@gmail.com, deepesha.3007@gmail.com, ajaunteva@gmail.com, rudolfs.mazurs@gmail.com, pecisk@gmail.com
 
 # On request from Ekaterina Gerasimova on 2016-02-04
 patreon@gnome.org kat@gnome.org
