Group aliases to info@gnome.org

--- a/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
+++ b/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
@@ -19,6 +19,7 @@ listmaster@gnome.org mailman@gnome.org
 sysadmin@gnome.org incoming+infrastructure-infrastructure-4851-issue-@gitlab.gnome.org
 wordpress@gnome.org noreply@gnome.org
 admin@gnome.org gnome-sysadmin@gnome.org
+emergency@gnome.org rt-emergency@gnome-sysadmins.pagerduty.com
 
 news@gnome.org gnome-web-list@gnome.org
 membership@gnome.org membership-committee@gnome.org
@@ -56,14 +57,16 @@ gcalctool-list@gnome.org gnome-calculator-list@gnome.org
 board@gnome.org board-list@gnome.org
 
 # Staff and general info
-info@gnome.org zana@gnome.org,kprogri@gnome.org,chenriksen@gnome.org
+info@gnome.org zana@gnome.org,kprogri@gnome.org,chenriksen@gnome.org,mwu@gnome.org
+sponsorship@gnome.org info@gnome.org
+licensing@gnome.org info@gnome.org
 pia-affiliate@gnome.org info@gnome.org
+support@gnome.org info@gnome.org
+video@gnome.org info@gnome.org
+events@gnome.org info@gnome.org
 
 # Hiring Committee
 hiring-committee@gnome.org edsearch-list@gnome.org
-
-# Alias for mail about Copyright/Trademark licensing
-licensing@gnome.org info@gnome.org
 
 # Coding Education Challenge
 cechallenge@gnome.org mwu@gnome.org
@@ -119,12 +122,6 @@ twitter-photos@gnome.org debarshir@gnome.org, mailumangjain@gmail.com
 
 # GNOME Summit twitter account
 gnomesummit-twitter@gnome.org gnome-sysadmin@gnome.org
-
-# as per Neil's request
-video@gnome.org info@gnome.org
-
-# GNOME Open Events platform
-events@gnome.org kat@gnome.org, tomtryf@gnome.org
 
 # Microsoft licenses
 microsoft@gnome.org av@gnome.org, csoriano@gnome.org
@@ -209,9 +206,6 @@ gitlab-issues@gnome.org devnull
 
 # GitLab reply by e-mail
 @gitlab.gnome.org gitlab-incoming-email@staff-mail.gnome.org
-
-emergency@gnome.org rt-emergency@gnome-sysadmins.pagerduty.com
-support@gnome.org info@gnome.org
 
 ### OWP Aliases && SOC aliases
 gnome-opw-admins@gnome.org marinaz@redhat.com, karen@gnome.org, kittykat3756@gmail.com
