Reorganize @guadec.org aliases

--- a/roles/postfix.server/templates/postmap/virtual-guadec.org.j2
+++ b/roles/postfix.server/templates/postmap/virtual-guadec.org.j2
@@ -1,19 +1,9 @@
-# Redirect all @guadec.org mails to the
-# guadec-organization@gnome.org mailing list
-sponsors@guadec.org	guadec-organization@gnome.org
-registration@guadec.org	guadec-organization@gnome.org
-press@guadec.org	guadec-organization@gnome.org
-info@guadec.org		guadec-organization@gnome.org
-youtube@guadec.org	guadec-organization@gnome.org
+sponsors@guadec.org	sponsorship@gnome.org
+registration@guadec.org	guadec@gnome.org
+press@guadec.org	guadec@gnome.org
+info@guadec.org		guadec@gnome.org
+youtube@guadec.org	guadec@gnome.org
+volunteers@guadec.org   guadec@gnome.org
 
-# bug 616287
 hostmaster@guadec.org	gnome-sysadmin@gnome.org
-webmaster@guadec.org	hostmaster@guadec.org,guadec-organization@gnome.org
-
-# 2016 GUADEC
-#ben@guadec.org    bejamin@sipsolutions.net
-markus@guadec.org markus.mohrhard@googlemail.com
-moira@guadec.org  moiramonika.schuler@gmail.com
-tobi@guadec.org   tobiasmue@gnome.org
-workshops@guadec.org    benjamin@sipsolutions.net,kat@gnome.org
-volunteers@guadec.org guadec-volunteers-list@gnome.org
+webmaster@guadec.org	gnome-sysadmin@gnome.org
