Alias (https://gitlab.gnome.org/Infrastructure/Infrastructure/-/issues/1067)

--- a/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
+++ b/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
@@ -96,6 +96,7 @@ patrick@gnome.org puiterwijk@gnome.org
 aday@gnome.org allanday@gnome.org
 misha@gnome.org mishashnurapet@gnome.org
 schuirmann@gnome.org lschuirma@gnome.org
+alexm@gnome.org alicem@gnome.org
 
 # Marketing aliases
 
