New alias (https://gitlab.gnome.org/Infrastructure/Infrastructure/-/issues/1084)

--- a/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
+++ b/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
@@ -310,6 +310,9 @@ headshots@gnome.org guadec-headshots-list@gnome.org
 # GNOME Latam social media accounts
 latam@gnome.org chenriksen@gnome.org
 
+# GTK Social - https://gitlab.gnome.org/Infrastructure/Infrastructure/-/issues/1084
+gtk-social@gnome.org ebassi@gnome.org
+
 # Bot user for managing mirrors with Lorry
 # https://gitlab.gnome.org/Infrastructure/Infrastructure/-/issues/705
 lorry-controller-gitlab-bot@gnome.org gnome-sysadmin@gnome.org
