New alias (Closes: https://gitlab.gnome.org/Infrastructure/Infrastructure/-/issues/1100)

--- a/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
+++ b/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
@@ -301,6 +301,9 @@ gnomeasia@gnome.org kprogri@gnome.org
 # https://gitlab.gnome.org/Infrastructure/Infrastructure/-/issues/435
 conduct@gnome.org code-of-conduct-committee@gnome.org
 
+# https://gitlab.gnome.org/Infrastructure/Infrastructure/-/issues/1100
+coc@gnome.org federico@gnome.org, zana@gnome.org, akuci@gnome.org, mdowney@gnome.org
+
 # GUADEC shop, requested by Kristi Progri on 2020-05-08
 shop@gnome.org zana@gnome.org, kprogri@gnome.org, chenriksen@gnome.org
 
