--- a/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
+++ b/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
@@ -292,7 +292,7 @@ neil@gnome.org nmcgovern@gnome.org
 neilm@gnome.org nmcgovern@gnome.org
 
 # https://gitlab.gnome.org/Infrastructure/Infrastructure/issues/238
-africa@gnome.org nkemregina@gmail.com
+africa@gnome.org nkemregina@gmail.com, fiberesimaibi@gmail.com
 
 # https://gitlab.gnome.org/Infrastructure/Infrastructure/-/issues/430
 asia@gnome.org sammyfung@gnome.org, kprogri@gnome.org, gnomeasia.nepal2023@protonmail.com, axon.rb@gmail.com, bhishan045msc@gmail.com,  asmitbm2952002@gmail.com, deepesha.3007@gmail.com
