Add stf@gnome.org alias

--- a/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
+++ b/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
@@ -320,6 +320,9 @@ gtk-social@gnome.org ebassi@gnome.org
 # https://gitlab.gnome.org/Infrastructure/Infrastructure/-/issues/705
 lorry-controller-gitlab-bot@gnome.org gnome-sysadmin@gnome.org
 
+# STF (requested by Sonny Piers)
+stf@gnome.org tbernard@gnome.org, sonnyp@gnome.org
+
 # Spamtrap
 /^.*@cvs.gnome.org$/ spamtrap@gnome.org
 /^.*@svn.gnome.org$/ spamtrap@gnome.org
