Migrate board@ to ServiceDesk

--- a/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
+++ b/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
@@ -54,7 +54,7 @@ soc-mentors-list@gnome.org mentors-list@gnome.org
 gcalctool-list@gnome.org gnome-calculator-list@gnome.org
 
 # Licensing, Board of Directors, donations
-board@gnome.org board-list@gnome.org
+board@gnome.org gitlab-servicedesk-forwarder@gnome.org
 
 # Staff and general info
 info@gnome.org zana@gnome.org,kprogri@gnome.org,chenriksen@gnome.org,mwu@gnome.org
