Add executive@g.o alias

--- a/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
+++ b/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
@@ -142,6 +142,7 @@ gnome-press-team@gnome.org engagement-private@gnome.org
 director@gnome.org zana@gnome.org
 trinityhousing@gnome.org director@gnome.org, snmartin@galilea.cl
 tutorials@gnome.org director@gnome.org
+executive@gnome.org hmillion@gnome.org
 
 # https://bugzilla.gnome.org/show_bug.cgi?id=796507
 travel-invitations-committee@gnome.org info@gnome.org
