Don't use a postfix rewrite, use servicedesk-email-forwarder instead

--- a/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
+++ b/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
@@ -177,9 +177,6 @@ apache@gnome.org webmaster@gnome.org
 # rdiff-backup logs are sent here
 backups@gnome.org av@gnome.org
 
-# updated from board-list to security-list 2010-08-19 cedwards
-security@gnome.org security-list@gnome.org
-
 # RHN account
 rhn@gnome.org av@gnome.org
 
@@ -300,7 +297,7 @@ asia@gnome.org sammyfung@gnome.org, kprogri@gnome.org, gnomeasia.nepal2023@proto
 gnomeasia@gnome.org kprogri@gnome.org
 
 # https://gitlab.gnome.org/Infrastructure/Infrastructure/-/issues/435
-conduct@gnome.org code-of-conduct-committee@gnome.org
+conduct@gnome.org gitlab-servicedesk-forwarder@gnome.org
 
 # https://gitlab.gnome.org/Infrastructure/Infrastructure/-/issues/1100
 coc@gnome.org federico@gnome.org, zana@gnome.org, akuci@gnome.org, mdowney@gnome.org
@@ -393,12 +390,12 @@ tracker-list@gnome.org spamtrap@gnome.org
 spamtrap@gnome.org spamtrap@staff-mail.gnome.org
 
 # Discourse / Former Mailman mailing lists which became aliases
-board-list@gnome.org board@discourse.gnome.org
-code-of-conduct-committee@gnome.org incoming+teams-conduct-workspace-5156-issue-@gitlab.gnome.org
-docs-feedback@gnome.org incoming+gnome-gnome-user-docs-1067-issue-@gitlab.gnome.org
+board-list@gnome.org gitlab-servicedesk-forwarder@gnome.org
+code-of-conduct-committee@gnome.org gitlab-servicedesk-forwarder@gnome.org
+docs-feedback@gnome.org gitlab-servicedesk-forwarder@gnome.org
 ftp-release-notifications@gnome.org zaitor@opensuse.org, leio@gentoo.org, mattst88@gentoo.org, heftig@archlinux.org, luc14n0@opensuse.org, pacho@gentoo.org, kalevlember@gmail.com, jbicha@ubuntu.com, emilyyrose@gmail.com, bandali@canonical.com, casaxa@gmail.com, nathan.teodosio@canonical.com, jarred.wilson@canonical.com
 fundraising@gnome.org board@gnome.org,zana@gnome.org
-gitlab-abuse-reports@gnome.org code-of-conduct-committee@discourse.gnome.org
+gitlab-abuse-reports@gnome.org gitlab-servicedesk-forwarder@gnome.org
 travel-committee@gnome.org travel-committee@discourse.gnome.org
 
 @discourse.gnome.org discourse-incoming-email@staff-mail.gnome.org
