Land logging for the OSCP damned-lies app

--- a/roles/rsyslog/templates/rsyslog.conf.j2
+++ b/roles/rsyslog/templates/rsyslog.conf.j2
@@ -67,6 +67,7 @@ $template r_oscp4_gitlab_application, "/var/log/hosts/%HOSTNAME%.gnome.org/%$YEA
 $template r_oscp4_gitlab_exceptions, "/var/log/hosts/%HOSTNAME%.gnome.org/%$YEAR%/%$MONTH%/%$DAY%/exceptions_json.log"
 $template r_oscp4_gitlab_api, "/var/log/hosts/%HOSTNAME%.gnome.org/%$YEAR%/%$MONTH%/%$DAY%/api_json.log"
 $template r_oscp4_gitlab_audit, "/var/log/hosts/%HOSTNAME%.gnome.org/%$YEAR%/%$MONTH%/%$DAY%/audit_json.log"
+$template r_oscp4_app_damned_lies, "/var/log/hosts/oscp4-apps.gnome.org/%$YEAR%/%$MONTH%/%$DAY%/damned-lies.log"
 
 #------------------------------------------------------------------------------#
 # templates for local logging                                                  #
@@ -148,6 +149,7 @@ local1.*                                        ?r_local1;TraditionalFormat
 # remote OSCP 4
 #------------------------------------------------------------------------------#
 if $msg contains "oscp4-audit" then ?r_oscp4_audit;TraditionalFormat
+if $msg contains "oscp4-app-damned-lies" then ?r_oscp4_app_damned_lies;TraditionalFormat
 
 :syslogtag, isequal, "oscp4-gitlab-application"
 local3.info ?r_oscp4_gitlab_application;TraditionalFormat
