Update amundson@gimp.org alias

--- a/roles/postfix.server/templates/postmap/virtual-gimp.org.j2
+++ b/roles/postfix.server/templates/postmap/virtual-gimp.org.j2
@@ -6,7 +6,7 @@ stelter@gimp.org stelter@gui.org
 
 # Shawn T. Amundson
 snorfle@gimp.org amundson@gimp.org
-amundson@gimp.org amundson@mail.gtk.org
+amundson@gimp.org amundson@gui.org
 
 # Manish Singh
 manish@gimp.org yosh@yosh.org
