Add an alias for our bookkeeper

--- a/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
+++ b/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
@@ -64,6 +64,7 @@ pia-affiliate@gnome.org info@gnome.org
 support@gnome.org info@gnome.org
 video@gnome.org info@gnome.org
 events@gnome.org info@gnome.org
+bookkeeper@gnome.org rebecca.selin.services@gmail.com
 
 # Hiring Committee
 hiring-committee@gnome.org edsearch-list@gnome.org
