Add Kristi to neil@ alias for FOSDEM

--- a/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
+++ b/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
@@ -287,7 +287,7 @@ soc-admins@gnome.org teuf@gnome.org, kittykat3756@gmail.com, csoriano@gnome.org,
 android@gnome.org ankitstarski@gmail.com, info@gnome.org
 
 ### ED aliases
-neil@gnome.org nmcgovern@gnome.org
+neil@gnome.org nmcgovern@gnome.org kprogri@gnome.org
 neilm@gnome.org nmcgovern@gnome.org
 
 # https://gitlab.gnome.org/Infrastructure/Infrastructure/issues/238
