--- a/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
+++ b/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
@@ -31,10 +31,7 @@ gnome-mirror-admins@gnome.org archive@ftp.sunet.se,help@mirrorservice.org,veilla
 # GUADEC
 
 guadec-logos@gnome.org guadec-planning@gnome.org
-
-# On request from Ekaterina Gerasimova on 2014-07-17
-# non-GNOME addresses are related to GUADEC 2020 in Mexico
-guadec@gnome.org zana@gnome.org, kprogri@gnome.org, chenriksen@gnome.org, mwu@gnome.org, asmitbm2952002@gmail.com, deepesha.3007@gmail.com, ajaunteva@gmail.com, rudolfs.mazurs@gmail.com, pecisk@gmail.com
+guadec@gnome.org zana@gnome.org, kprogri@gnome.org, chenriksen@gnome.org, mwu@gnome.org
 
 # On request from Ekaterina Gerasimova on 2016-02-04
 patreon@gnome.org kat@gnome.org
