Add Andy to the microsoft@g.o alias (Closes https://gitlab.gnome.org/Infrastructure/Infrastructure/-/issues/1375)

--- a/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
+++ b/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
@@ -123,7 +123,7 @@ twitter-photos@gnome.org debarshir@gnome.org, mailumangjain@gmail.com
 gnomesummit-twitter@gnome.org gnome-sysadmin@gnome.org
 
 # Microsoft licenses
-microsoft@gnome.org av@gnome.org, csoriano@gnome.org
+microsoft@gnome.org av@gnome.org, csoriano@gnome.org, andyholmes@gnome.org
 
 # https://gitlab.gnome.org/Infrastructure/Infrastructure/-/issues/311
 gsod-team@gnome.org pmkovar@gnome.org, ebassi@gnome.org, alexbalut@gnome.org, kprogri@gnome.org, sri@gnome.org
