roles: update our MS Store alias.

--- a/roles/postfix.server/templates/postmap/virtual-gimp.org.j2
+++ b/roles/postfix.server/templates/postmap/virtual-gimp.org.j2
@@ -306,7 +306,7 @@ aryeom@gimp.org aryeomhan@staff-mail.gnome.org
 social@gimp.org liam@fromoldbooks.org, jehan@gimp.org, mitch@gimp.org, schumaml@gmx.de
 
 # https://gitlab.gnome.org/Infrastructure/Infrastructure/-/issues/831
-msstore@gimp.org jernej|s-gimp@eternallybored.org, jgboerema@gmail.com, mitch@gimp.org, schumaml@gmx.de, jehan@gimp.org
+msstore@gimp.org jernej|s-gimp@eternallybored.org, jgboerema@gmail.com, mitch@gimp.org, schumaml@gmx.de, jehan@gimp.org, brunolopesdsilv@outlook.com
 
 # https://gitlab.gnome.org/Infrastructure/Infrastructure/-/issues/844
 security@gimp.org jernej|s-gimp@eternallybored.org, jgboerema@gmail.com, mitch@gimp.org, schumaml@gmx.de, jehan@gimp.org, liam@fromoldbooks.org
