Land google@g.o as per request (https://gitlab.gnome.org/GNOME/gnome-online-accounts/-/issues/288)

--- a/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
+++ b/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
@@ -125,6 +125,9 @@ gnomesummit-twitter@gnome.org gnome-sysadmin@gnome.org
 # Microsoft licenses
 microsoft@gnome.org av@gnome.org, csoriano@gnome.org, andyholmes@gnome.org
 
+# GOA - Google
+google@gnome.org andyholmes@gnome.org, mcrha@redhat.com
+
 # https://gitlab.gnome.org/Infrastructure/Infrastructure/-/issues/311
 gsod-team@gnome.org pmkovar@gnome.org, ebassi@gnome.org, alexbalut@gnome.org, kprogri@gnome.org, sri@gnome.org
 
