Add dsr@gnome.org alias

--- a/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
+++ b/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
@@ -399,6 +399,9 @@ fundraising@gnome.org board@gnome.org,zana@gnome.org
 gitlab-abuse-reports@gnome.org gitlab-servicedesk-forwarder@gnome.org
 travel-committee@gnome.org travel-committee@discourse.gnome.org
 
+# data erasure requests
+dsr@gnome.org gitlab-servicedesk-forwarder@gnome.org
+
 @discourse.gnome.org discourse-incoming-email@staff-mail.gnome.org
 
 #######################
