Make Ansible roles run on RHEL 9

--- a/roles/base_network/templates/hosts.j2
+++ b/roles/base_network/templates/hosts.j2
@@ -5,10 +5,12 @@
 
 
 {% if datacenter == 'ral3' %}
+{% if 'ipaservers' in groups %}
 {% if ansible_fqdn in groups['ipaservers'] %}
 {% for host in groups['ipaservers'] %}
 {{ hostvars[host].ansible_eth1.ipv4.address }} {{ hostvars[host].ansible_fqdn }} {{ hostvars[host].ansible_hostname }}
 {% endfor %}
+{% endif %}
 {% endif %}
 {% elif datacenter == 'osuosl' %}
 8.43.85.20 vpn.gnome.org
