acc.umu.se deprecation (https://gitlab.gnome.org/Infrastructure/Infrastructure/-/issues/1514)

--- a/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
+++ b/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
@@ -26,7 +26,7 @@ membership@gnome.org membership-committee@gnome.org
 docs@gnome.org gnome-doc-list@gnome.org
 jobs@gnome.org webmaster@gnome.org
 
-gnome-mirror-admins@gnome.org archive@ftp.sunet.se,help@mirrorservice.org,veillard@redhat.com,webmaster@cse.buffalo.edu,ftp-adm@acc.umu.se,Fabrice.Bellet@creatis.insa-lyon.fr,ftp-admin@is.naist.jp,ftp@df.lth.se,mirror@artfiles.org,ftpadmin@is.co.za,help@mirrorservice.org,mirror@mirror.umd.edu,ftpmirror-beheer@nluug.nl,dakulov@maxcdn.com,support@osuosl.org,stephenpcg@gmail.com,noc@nbtelecom.com.br,adrian.reber@hs-esslingen.de,board@muug.mb.ca,rrze-ftp-admins@fau.de,staff@dotsrc.org,my@yaoge123.com,support@gethosted.online
+gnome-mirror-admins@gnome.org archive@ftp.sunet.se,help@mirrorservice.org,veillard@redhat.com,webmaster@cse.buffalo.edu,ftp-adm@accum.se,Fabrice.Bellet@creatis.insa-lyon.fr,ftp-admin@is.naist.jp,ftp@df.lth.se,mirror@artfiles.org,ftpadmin@is.co.za,help@mirrorservice.org,mirror@mirror.umd.edu,ftpmirror-beheer@nluug.nl,dakulov@maxcdn.com,support@osuosl.org,stephenpcg@gmail.com,noc@nbtelecom.com.br,adrian.reber@hs-esslingen.de,board@muug.mb.ca,rrze-ftp-admins@fau.de,staff@dotsrc.org,my@yaoge123.com,support@gethosted.online
 
 # GUADEC
 
