Add accounting@g.o email alias

--- a/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
+++ b/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
@@ -62,6 +62,7 @@ support@gnome.org info@gnome.org
 video@gnome.org info@gnome.org
 events@gnome.org info@gnome.org
 bookkeeper@gnome.org rebecca.selin.services@gmail.com
+accounting@gnome.org zana@gnome.org
 
 # Hiring Committee
 hiring-committee@gnome.org edsearch-list@gnome.org
