Add Anisa to info@ and accounting@ aliases

--- a/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
+++ b/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
@@ -54,7 +54,7 @@ gcalctool-list@gnome.org gnome-calculator-list@gnome.org
 board@gnome.org gitlab-servicedesk-forwarder@gnome.org
 
 # Staff and general info
-info@gnome.org zana@gnome.org,kprogri@gnome.org,chenriksen@gnome.org,mwu@gnome.org
+info@gnome.org zana@gnome.org,kprogri@gnome.org,chenriksen@gnome.org,mwu@gnome.org,akuci@gnome.org
 sponsorship@gnome.org info@gnome.org
 licensing@gnome.org info@gnome.org
 pia-affiliate@gnome.org info@gnome.org
@@ -62,7 +62,7 @@ support@gnome.org info@gnome.org
 video@gnome.org info@gnome.org
 events@gnome.org info@gnome.org
 bookkeeper@gnome.org rebecca.selin.services@gmail.com
-accounting@gnome.org zana@gnome.org
+accounting@gnome.org zana@gnome.org,akuci@gnome.org
 
 # Hiring Committee
 hiring-committee@gnome.org edsearch-list@gnome.org
