--- a/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
+++ b/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
@@ -403,7 +403,11 @@ travel-committee@gnome.org travel-committee@discourse.gnome.org
 # data erasure requests
 dsr@gnome.org gitlab-servicedesk-forwarder@gnome.org
 
+# Discourse over e-mail
 @discourse.gnome.org discourse-incoming-email@staff-mail.gnome.org
+
+# https://gitlab.gnome.org/Infrastructure/Infrastructure/-/issues/1598
+research@gnome.org interns.usabilitytest@gmail.com
 
 #######################
 ## MANAGED BY PUPPET ##
