--- a/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
+++ b/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
@@ -318,7 +318,7 @@ gtk-social@gnome.org ebassi@gnome.org
 lorry-controller-gitlab-bot@gnome.org gnome-sysadmin@gnome.org
 
 # STF (requested by Sonny Piers)
-stf@gnome.org tbernard@gnome.org, sonnyp@gnome.org, sh@changeset.nyc
+stf@gnome.org tbernard@gnome.org, sonnyp@gnome.org, sh@changeset.nyc, thibaultamartin@gnome.org
 
 # Spamtrap
 /^.*@cvs.gnome.org$/ spamtrap@gnome.org
