Add e-mail aliases for Thib and Richard

--- a/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
+++ b/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
@@ -96,6 +96,8 @@ aday@gnome.org allanday@gnome.org
 misha@gnome.org mishashnurapet@gnome.org
 schuirmann@gnome.org lschuirma@gnome.org
 alexm@gnome.org alicem@gnome.org
+thib@gnome.org thibaultamartin@gnome.org
+richard@gnome.org rlittauer@gnome.org
 
 # Marketing aliases
 
