Add friendly aliases for the staff

--- a/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
+++ b/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
@@ -85,19 +85,25 @@ defendus@gnome.org zana@gnome.org
 gimp@gnome.org mitch@gimp.org, zana@gnome.org, schumaml@gmx.de
 
 # Personal aliases.
-jacob@gnome.org jberkman@gnome.org
-terra@gnome.org mortenw@gnome.org
-ten@gnome.org ten@ximian.com
-egerasimov@gnome.org kat@gnome.org
-seb128@gnome.org sbacher@gnome.org
-bolsh@gnome.org dneary@gnome.org
-patrick@gnome.org puiterwijk@gnome.org
 aday@gnome.org allanday@gnome.org
-misha@gnome.org mishashnurapet@gnome.org
-schuirmann@gnome.org lschuirma@gnome.org
 alexm@gnome.org alicem@gnome.org
-thib@gnome.org thibaultamartin@gnome.org
+anisa@gnome.org akuci@gnome.org
+bart@gnome.org bpiotrowski@gnome.org
+bolsh@gnome.org dneary@gnome.org
+caroline@gnome.org chenriksen@gnome.org
+egerasimov@gnome.org kat@gnome.org
+jacob@gnome.org jberkman@gnome.org
+kristi@gnome.org kprogri@gnome.org
+melissa@gnome.org mwu@gnome.org
+misha@gnome.org mishashnurapet@gnome.org
+patrick@gnome.org puiterwijk@gnome.org
 richard@gnome.org rlittauer@gnome.org
+rosanna@gnome.org zana@gnome.org
+schuirmann@gnome.org lschuirma@gnome.org
+seb128@gnome.org sbacher@gnome.org
+ten@gnome.org ten@ximian.com
+terra@gnome.org mortenw@gnome.org
+thib@gnome.org thibaultamartin@gnome.org
 
 # Marketing aliases
 
