Attempt to figure out sender aliases

--- a/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
+++ b/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
@@ -88,7 +88,7 @@ gimp@gnome.org mitch@gimp.org, zana@gnome.org, schumaml@gmx.de
 aday@gnome.org allanday@gnome.org
 alexm@gnome.org alicem@gnome.org
 anisa@gnome.org akuci@gnome.org
-bart@gnome.org bpiotrowski@gnome.org
+bart@gnome.org bpiotrowski
 bolsh@gnome.org dneary@gnome.org
 caroline@gnome.org chenriksen@gnome.org
 egerasimov@gnome.org kat@gnome.org
