Change staff aliases to use the form expected by sender_login_maps

--- a/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
+++ b/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
@@ -87,18 +87,18 @@ gimp@gnome.org mitch@gimp.org, zana@gnome.org, schumaml@gmx.de
 # Personal aliases.
 aday@gnome.org allanday@gnome.org
 alexm@gnome.org alicem@gnome.org
-anisa@gnome.org akuci@gnome.org
+anisa@gnome.org akuci
 bart@gnome.org bpiotrowski
 bolsh@gnome.org dneary@gnome.org
-caroline@gnome.org chenriksen@gnome.org
+caroline@gnome.org chenriksen
 egerasimov@gnome.org kat@gnome.org
 jacob@gnome.org jberkman@gnome.org
 kristi@gnome.org kprogri@gnome.org
-melissa@gnome.org mwu@gnome.org
+melissa@gnome.org mwu
 misha@gnome.org mishashnurapet@gnome.org
 patrick@gnome.org puiterwijk@gnome.org
 richard@gnome.org rlittauer@gnome.org
-rosanna@gnome.org zana@gnome.org
+rosanna@gnome.org zana
 schuirmann@gnome.org lschuirma@gnome.org
 seb128@gnome.org sbacher@gnome.org
 ten@gnome.org ten@ximian.com
