Alias accounts@ to accounting@

--- a/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
+++ b/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
@@ -63,6 +63,7 @@ video@gnome.org info@gnome.org
 events@gnome.org info@gnome.org
 bookkeeper@gnome.org rebecca.selin.services@gmail.com
 accounting@gnome.org zana@gnome.org,akuci@gnome.org
+accounts@gnome.org accounting@gnome.org
 
 # Hiring Committee
 hiring-committee@gnome.org edsearch-list@gnome.org
