--- a/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
+++ b/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
@@ -31,7 +31,7 @@ gnome-mirror-admins@gnome.org archive@ftp.sunet.se,help@mirrorservice.org,veilla
 # GUADEC
 
 guadec-logos@gnome.org guadec-planning@gnome.org
-guadec@gnome.org zana@gnome.org, kprogri@gnome.org, chenriksen@gnome.org, mwu@gnome.org
+guadec@gnome.org zana@gnome.org, kprogri@gnome.org
 
 # On request from Ekaterina Gerasimova on 2016-02-04
 patreon@gnome.org kat@gnome.org
@@ -54,7 +54,6 @@ gcalctool-list@gnome.org gnome-calculator-list@gnome.org
 board@gnome.org gitlab-servicedesk-forwarder@gnome.org
 
 # Staff and general info
-info@gnome.org zana@gnome.org,kprogri@gnome.org,chenriksen@gnome.org,mwu@gnome.org,akuci@gnome.org
 sponsorship@gnome.org info@gnome.org
 licensing@gnome.org info@gnome.org
 pia-affiliate@gnome.org info@gnome.org
@@ -67,9 +66,6 @@ accounts@gnome.org accounting@gnome.org
 
 # Hiring Committee
 hiring-committee@gnome.org edsearch-list@gnome.org
-
-# Coding Education Challenge
-cechallenge@gnome.org mwu@gnome.org
 
 # University Outreach (https://gitlab.gnome.org/Infrastructure/Infrastructure/issues/254)
 universityoutreach@gnome.org kprogri@gnome.org, nkemregina@gnome.org
@@ -91,11 +87,9 @@ alexm@gnome.org alicem@gnome.org
 anisa@gnome.org akuci
 bart@gnome.org bpiotrowski
 bolsh@gnome.org dneary@gnome.org
-caroline@gnome.org chenriksen
 egerasimov@gnome.org kat@gnome.org
 jacob@gnome.org jberkman@gnome.org
 kristi@gnome.org kprogri@gnome.org
-melissa@gnome.org mwu
 misha@gnome.org mishashnurapet@gnome.org
 patrick@gnome.org puiterwijk@gnome.org
 richard@gnome.org rlittauer@gnome.org
@@ -314,7 +308,7 @@ conduct@gnome.org gitlab-servicedesk-forwarder@gnome.org
 coc@gnome.org federico@gnome.org, zana@gnome.org, akuci@gnome.org, mdowney@gnome.org
 
 # GUADEC shop, requested by Kristi Progri on 2020-05-08
-shop@gnome.org zana@gnome.org, kprogri@gnome.org, chenriksen@gnome.org
+shop@gnome.org zana@gnome.org, kprogri@gnome.org
 
 # GUADEC headshots
 headshots@gnome.org guadec-headshots-list@gnome.org
